@@ -230,10 +230,17 @@ sub hook ($@) {
 }
 
 sub pagespec_match ($@) {
-	# convert pagespec_match's return object into a XML RPC boolean
+	# convert return object into a XML RPC boolean
 	my $plugin=shift;
 
 	return RPC::XML::boolean->new(0 + IkiWiki::pagespec_march(@_));
+}
+
+sub pagespec_match_list ($@) {
+	# convert return object into a XML RPC boolean
+	my $plugin=shift;
+
+	return RPC::XML::boolean->new(0 + IkiWiki::pagespec_march_list(@_));
 }
 
 1
