@@ -50,13 +50,9 @@ sub preprocess (@) {
 
 	add_depends($params{page}, $params{pages});
 
-	my @list;
-	foreach my $page (keys %pagesources) {
-		next if $page eq $params{page};
-		if (pagespec_match($page, $params{pages}, location => $params{page})) {
-			push @list, $page;
-		}
-	}
+	my @list=pagespec_match_list(
+		[ grep { $_ ne $params{page} } keys %pagesources],
+		$params{pages}, location => $params{page});
 	
 	@list = sort { $params{timehash}->{$b} <=> $params{timehash}->{$a} } @list;
 
